# FFmpeg

StudyTest/AV_Log_Test/: AV_Log_Test  AV_Log_Test.c  AV_Log_Test.md  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
StudyTest/Basic_knowledge/: Basic_Knowledge.md
StudyTest/Func_Study/: avformat_open_input.md
StudyTest/Struct_Study/: AVClass&AVOption.md  AVFormatContext.md
include/SDL2/: SDL_config.h
include/libavformat/: avformat.h
include/libavutil/: ffversion.h
lib/: libSDL2.la
libavcodec/: avcodec.h  codec_par.c  packet.h
libavformat/: avformat.h  avio.h  demux.c  demux.h  demux_utils.c  format.c  internal.h  options.c  utils.c
libavutil/: avutil.h
share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffplay-all.1  ffprobe-all.1
